# compile

./: .gitignore  CMakeLists.txt  README.md  asm_generator.cpp  asm_generator.h  ast.c  ast.h  ast_symbol.c  ast_symbol.h  build.sh  grammar.y  intermediate.cpp  intermediate.h  lexical.l  main.c  run.sh  symbol_table.c  symbol_table.h  translate.y
testset/: array2d.cpp  base.cpp  expr.cpp  function_normal.cpp  function_recursive.cpp  struct.cpp
